Stage5 Version 1.3 figured out desSer and Ser in DPM, still need byte decode and map issue worked out